--- a/_data/2022/atlanta/participants.yml
+++ b/_data/2022/atlanta/participants.yml
@@ -50,8 +50,51 @@
   bio: "Eliza Oak is a second-year political science PhD student, also pursuing an MA in Statistics & Data Science, at Yale University. Her work broadly spans comparative politics, international political economy, and quantitative methods. Specifically, she's interested in questions related to the politics of blockchain and other emerging technologies, particularly in developing markets. She has used a variety of methods in her research, including applying machine learning techniques to collect and analyze text and image data, or analyzing original survey and experimental data. Prior to Yale, Eliza worked as a research associate at MIT’s Political Methodology Lab, and she holds a BA in political science from BYU."  
   website: https://www.linkedin.com/in/eliza-riley-oak-322292109/
   
+- name: "Hanna Schleihauf"
+  image: /assets/images/Hanna Schleihauf.jpg
+  bio: "Hanna Schleihauf is a Marie Curie Postdoctoral Fellow at University of Berkeley, California. She studies how people across the world transmit behaviors and beliefs between one another and hopes to investigate the influences of direct and indirect exchange on the spread of knowledge and beliefs within the online environment in the future."  
+  website: https://www.linkedin.com/in/hanna-schleihauf/
   
+- name: "Kayla McMinimy"
+  image: /assets/images/Kayla McMinimy.jpeg
+  bio: "Kayla McMinimy is a Public Communication PhD student at Georgia State University. She is a Craigie Fellow and is associated with the Transcultural Conflict and Violence Initiative. She studies politics, rhetoric, media/social media, and ideology."  
   
+- name: "Ryan	Ellis"
+  image: /assets/images/Ryan Ellis.jpg
+  bio: "Ryan Ellis is a PhD student in the School of Economics at the Georgia Institute of Technology. His research interests include migration and borders, health, and development economics. Prior to joining Georgia Tech, Ryan worked as an educator and financial counselor with immigrant-led non-profit organizations in Nashville, TN."  
   
+- name: "Katherine Kountz"
+  image: /assets/images/Katherine Kountz.jpg
+  bio: "Katherine Kountz is a doctoral student in the Department of Communication at Georgia State University and a presidential fellow in the Transcultural Conflict and Violence Initiative (TCV). She uses semi-automated machine learning methods to analyze rhetorical environments and their influence on political polarization, radicalization, and how political extremists mobilize media for recruitment."  
   
+- name: "Allyson Bachta"
+  image: /assets/images/Allyson Bachta.jpg
+  bio: "Allyson Bachta is a PhD candidate at University of Massachusetts Boston. Her research lies at the intersection of intrastate political violence and education in post-conflict, polarized, and divided societies. She is specifically interested in examining how machine learning can support early conflict warning and prevention research."  
+  website: https://www.linkedin.com/in/allyson-bachta-347b2244/
   
+- name: "Burak Kazim Yilmaz"
+  image: /assets/images/Burak Kazim Yılmaz.jpg
+  bio: "Burak is a PhD student in political science at Emory University. His research interests include civil wars, terrorism, and ethnic politics. Before starting the doctoral program at Emory, he earned a BA and an MA from Bilkent University in Turkey."  
+  
+- name: "Jennifer	Hickey"
+  image: /assets/images/Jennifer Hickey.jpg
+  bio: "Jennifer is pursuing a PhD of Political Science and a Graduate Certificate in Women’s Studies at the University of Georgia. She is an attorney and Postdoctoral Fellow with the Vulnerability and the Human Condition Initiative at Emory Law. Jennifer is a former software engineer with an MS in Software Engineering."  
+  
+- name: "Beth	Stevens"
+  image: /assets/images/Beth Stevens.jpg
+  bio: "Beth Stevens is a doctoral student at Georgia State University in the Cognitive Psychology department. Her research interests focus on the intersection of psychology and the law. Currently, her work applies non-conventional data techniques to analyzing how system and estimator variables influence eyewitness identification and legal decision-making."  
+  website: https://bethbstevens.wordpress.com/
+  
+- name: "Yuehan (Jessie) Liu "
+  image: /assets/images/Jessie Liu.jpg
+  bio: "Yuehan (Jessie) Liu is a Ph.D. candidate in the Department of Communication at Georgia State University. Her dissertation focuses on people's motivations to give social support on social media. Before coming to the Ph.D. program, Jessie studied Journalism at Michigan State University and earned her bachelor's and master's degrees."  
+  
+- name: "Can Chen"
+  image: /assets/images/Can Chen.jpeg
+  bio: "Can Chen is an associate professor in the Andrew Young School of Policy Studies at Georgia State University. His substantive research topic interests include infrastructure (transportation) finance and policy, disaster finance, and fiscal transparency. His methodological interests are causal research designs and emerging data sciences."  
+  website: https://aysps.gsu.edu/profile/can-chen/
+  
+- name: "Juan	Gomez-Cruces"
+  image: /assets/images/Juan Gomez.jpg
+  bio: "Juan S. Gómez Cruces is an ABD Ph.D. student at Georgia State University, in the Political Science program. Gómez Cruces was born and raised in Mexico City. In 2013, he moved to Denver, Colorado where he obtained an M.A. in Political Science for the University of Colorado, Denver. His research interests include populist rhetoric, social media communication, and polarization in Latin America."  
+  website: http://juangomezcruces.gsucreate.org/
