--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -9,7 +9,7 @@
     
   
      
-        **Speaker**
+        **Speakers**
       
           - Speaker TBA
 
@@ -139,7 +139,7 @@
     
     
     
-        **Speaker**
+        **Speakers**
       
           - Janeria Easley, Ph.D., Assistant professor, Department of African American Studies, Emory University
 
@@ -161,7 +161,7 @@
     - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:15 Introduction to new SICSS-Howard/Mathematica site project"
     - name: "4:15 - 4:30 Break"
-    - name: "4:15 - 5:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary. An Intimate Fireside Chat and LIVE Q&A (*Zoom*)
+    - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary. An Intimate Fireside Chat and LIVE Q&A (*Zoom*)
     
         - [Anthony K. Wutoh, Ph.D., R.Ph., Provost of Howard University](https://provost.howard.edu/about/administration#:~:text=D.%2C%20R.Ph.,and%20the%20Center%20of%20Excellencew)
         
@@ -256,11 +256,11 @@
   name: "Day 6: Work on group projects"
   events:
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-    - name: '10:00 - 11:30 SICSS-Africa + African Descendents Inaugural Joint Panel: "Interrogating Data Collection Methods Focused on African and African Descendents Around the World: Problems, Realities, And Future Opportunities" (*Zoom*)
+    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Joint Panel: "Interrogating Data Collection Methods Focused on African and African Descendents Around the World: Problems, Realities, And Future Opportunities" (*Zoom*)
       
       
       
-        **Speaker**
+        **Speakers**
       
           - [Vissého Adjiwanou, Ph.D., Department of Sociology, Université du Québec à Montréal (UQAM)](https://sociologie.uqam.ca/corps-professoral/professeurs-es/professeur/adjiwanou.visseho/)
 
@@ -307,7 +307,7 @@
         
       
      
-        **Speaker**
+        **Speakers**
       
           - [Andre Brock, Ph.D., Associate Professor of Media Studies at Georgia Tech](https://andrebrock.academia.edu/)
 
