--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -6,7 +6,13 @@
 - name: Marvellous Ngundu
   image: /assets/images/MNgundu.jpg
   bio: "<p align='justify'>Marvellous Ngundu is a Postdoctoral Research Fellow in economics at the University of KwaZulu Natal (UKZN) in South Africa, a Research Assistant at the UKZN's Macroeconomics Research Unit (MRU), and a Research Fellow at Covenant University's Center for Economic Policy and Development Research (CEPDeR) in Nigeria. His primary research interests include China-Africa economic engagement, and international and development economics.</p>"
-  
+
+- name: Mary Muyonga
+  image: 
+  bio: "<p align='justify'>Mary Muyonga is a PhD candidate at the Population Institute at the Department of Geography, Population and Environmental Studies at the University of Nairobi in Kenya. Prior to her doctoral studies, Mary obtained a Master's degree from the same Institute. Her research interests are migration and urbanisation and their interplay with development, and more recently, the use of alternative, emergent research methods in social science research.</p>"
+  website: https://twitter.com/MaryMuyonga
+
+
 - name: Damian Kalu	Ude
   image: /assets/images/UDamian.jpg
   bio: "<p align='justify'>Ude Damian Kalu is a lecturer in the Department of Economics, Michael Okpara University of Agriculture, Umudike, Nigeria. He holds a PhD from the University of Nigeria, Nsukka. He has a research interest in Econometrics, Finance and Public Sector Economics. He is a member of the Econometric Society and also a Research Fellow at the Centre for Economic Policy and Development Research (CEPDeR), Covenant University.</p>"
