--- a/_data/2022/fgv-dapp-brazil/participants.yml
+++ b/_data/2022/fgv-dapp-brazil/participants.yml
@@ -16,7 +16,7 @@
 
 - name: Felipe Roquete
   bio: "Felipe Roquete is the current Head of Intelligence Unity of Cade (since 2015), and was the Deputy Head of Bid Rigging Unit of Cade (2009-2014). He has a degree in Law (UFMG) and holds a Master’s degree in Political Science (UnB). He is also a PhD Candidate of Regulation Law at Fundação Getúlio Vargas (FGV). His research interests include AI regulation and antitrust."
-  image: /assets/images/1ZHcbWW4t3ADBCJXA6scMn3NPdrm8fl0J.jpeg
+  image: /assets/images/1ZHcbWW4t3ADBCJXA6scMn3NPdrm8fl0J.png
 
 - name: Gabriel Madeira
 
@@ -34,7 +34,7 @@
 
 - name: Lucas Gelape
   bio: "Lucas Gelape has a PhD in Political Science from the University of São Paulo. Currently, he works at Fundação Seade (São Paulo State Statistical Bureau), developing computational social science projects to produce official statistics. Previously, he worked for news organizations on topics such as elections and social media."
-  image: /assets/images/1NUvsC7ovfIwTKGmGeE8lYrUje5U1a_Ow.jpeg
+  image: /assets/images/1NUvsC7ovfIwTKGmGeE8lYrUje5U1a_Ow.png
 
 - name: Lucy Oliveira
   bio: "Lucy Oliveira is Associate Professor of Political Science at Federal University of São Carlos, Brazil. She was post-doctoral fellow at Brazilian Center of Analysis and Planning (CEBRAP/FAPESP). She received her PhD from Political Science at UFSCar. Currently she researchs about democracy in Brazil, rhetorical presidency, going public, political jornalism, Text as Data and Computational Social Science methods."
@@ -42,11 +42,11 @@
 
 - name: Murilo Junqueira
   bio: "Professor of Political Science at the Federal University of Pará. Enthusiast of Computational Social Sciences, Philosophy, History, Economics and Other Intellectual Random Walks ..."
-  image: /assets/images/1-h_k_itgL8wofbGNfjPPip91EczBXtY6.jpeg
+  image: /assets/images/1-h_k_itgL8wofbGNfjPPip91EczBXtY6.png
 
 - name: Natália Moreira
   bio: "Natália Moreira is a researcher at the Department of Political Science at the University of São Paulo. She holds a BA in social science and an MA and Ph.D. in political science from the University of São Paulo. Her research addresses questions related to public opinion, political methodology, and public policy."
-  image: /assets/images/1RAjnwf58i57XTDCtyswJ1hqlg7r8eegx.jpeg
+  image: /assets/images/1RAjnwf58i57XTDCtyswJ1hqlg7r8eegx.pdf
 
 - name: Pedro Seguel
   bio: "Pedro is a Ph.D. student in Management of Information Systems at McGill University. He is working on topics related to developer communities, collaborative technologies, and the fair impact of Artificial Intelligence. His research focuses on the role of expertise and professions in shaping technological and institutional change and how such changes are reshaping expertise and work."
@@ -78,11 +78,11 @@
 
 - name: Victor Siqueira
   bio: "Victor Siqueira is pursuing an M.A in Political Science at Universidade Federal de Pernambuco, Brazil. His interests lie in Climate Change Communication, Public Opinion, and Survey Methods. In particular, he researches the political correlates between climate change opinion, partisanship, and ideology, and the links between attitudes and behavior towards climate and environmental issues."
-  image: /assets/images/1SLo3YCqNurK3oovvAQPMo5lRDBxRK7bR.jpeg
+  image: /assets/images/1SLo3YCqNurK3oovvAQPMo5lRDBxRK7bR.png
 
 - name: Virginia Silva
   bio: "Virginia Rocha is a Ph.D. candidate in Political Science at the Federal University of Pernambuco, Brazil. She was a Visiting Doctoral Student at Oxford (2018-2019), where she worked on her Ph.D. dissertation, examing how political dynasties affect transparency in Brazilian municipalities. Her research focuses on political institutions and public policy."
-  image: /assets/images/12PEdQQThpSTzSm9Nn3tjzL9r2FBSGMpz.jpeg
+  image: /assets/images/12PEdQQThpSTzSm9Nn3tjzL9r2FBSGMpz.PNG
 
 - name: Yago Paiva
   bio: "Yago Paiva é doutorando em Ciência Política pelo Instituto de Estudos Sociais e Políticos da Universidade do Estado do Rio de Janeiro (Iesp-Uerj). Mestre em Ciência Política pela mesma instituição. Estuda a relação entre instituições políticas e tecnologias digitais, capacidades estatais e o uso de mídias digitais em eleições. Tem interesse em como métodos quantitativos e computacionais podem ser aplicados à inferência causal. Suas pesquisas atuais são sobre o processo de digitalização do Estado, os efeitos das estruturas dos sistemas políticos na digitalização e os determinantes das estratégias eleitorais digitais."
