fixed image links

--- a/_data/2022/fgv-dapp-brazil/participants.yml
+++ b/_data/2022/fgv-dapp-brazil/participants.yml
@@ -46,7 +46,7 @@
 
 - name: Natália Moreira
   bio: "Natália Moreira is a researcher at the Department of Political Science at the University of São Paulo. She holds a BA in social science and an MA and Ph.D. in political science from the University of São Paulo. Her research addresses questions related to public opinion, political methodology, and public policy."
-  image: /assets/images/1RAjnwf58i57XTDCtyswJ1hqlg7r8eegx.pdf
+  image: /assets/images/Natalia_Moreira.png
 
 - name: Pedro Seguel
   bio: "Pedro is a Ph.D. student in Management of Information Systems at McGill University. He is working on topics related to developer communities, collaborative technologies, and the fair impact of Artificial Intelligence. His research focuses on the role of expertise and professions in shaping technological and institutional change and how such changes are reshaping expertise and work."
@@ -82,7 +82,7 @@
 
 - name: Virginia Silva
   bio: "Virginia Rocha is a Ph.D. candidate in Political Science at the Federal University of Pernambuco, Brazil. She was a Visiting Doctoral Student at Oxford (2018-2019), where she worked on her Ph.D. dissertation, examing how political dynasties affect transparency in Brazilian municipalities. Her research focuses on political institutions and public policy."
-  image: /assets/images/12PEdQQThpSTzSm9Nn3tjzL9r2FBSGMpz.PNG
+  image: /assets/images/12PEdQQThpSTzSm9Nn3tjzL9r2FBSGMpz.png
 
 - name: Yago Paiva
   bio: "Yago Paiva é doutorando em Ciência Política pelo Instituto de Estudos Sociais e Políticos da Universidade do Estado do Rio de Janeiro (Iesp-Uerj). Mestre em Ciência Política pela mesma instituição. Estuda a relação entre instituições políticas e tecnologias digitais, capacidades estatais e o uso de mídias digitais em eleições. Tem interesse em como métodos quantitativos e computacionais podem ser aplicados à inferência causal. Suas pesquisas atuais são sobre o processo de digitalização do Estado, os efeitos das estruturas dos sistemas políticos na digitalização e os determinantes das estratégias eleitorais digitais."
