--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -167,7 +167,7 @@
     - name: "4:15 - 4:30 Break"
     - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary. An Intimate Fireside Chat and LIVE Q&A (*Zoom*)
     
-        - [Anthony K. Wutoh, Ph.D., R.Ph., Provost of Howard University](https://provost.howard.edu/about/administration#:~:text=D.%2C%20R.Ph.,and%20the%20Center%20of%20Excellencew)
+        - [Anthony K. Wutoh, Ph.D., R.Ph., Provost of Howard University](https://provost.howard.edu/about/administration#:~:text=D.%2C%20R.Ph.,and%20the%20Center%20of%20Excellencew)"
         
   
 - date: 2022-06-21
