--- a/_data/2022/bologna/speakers.yml
+++ b/_data/2022/bologna/speakers.yml
@@ -1,1 +1,14 @@
-- name:
+- name: Chiara Binelli
+  image: /assets/images/Binelli.jpg
+  bio: "Chiara Binelli received her Ph.D. in Economics from the University College London. She is Associate Professor of Economics in the Department of Political and Social Sciences at the University of Bologna and Founder and Co-Director of the Center for Research and Social Progress (cersp.org). Her early research focused on returns to schooling, quality of education, informal labor markets, social inequality, employment and earnings’ expectations. More recently, she has been working on using data science to address policy-relevant questions such as climate change. She has published in several international journals such as the Review of Economic Dynamics, Social Indicators Research, Economics of Education Review, and World Development."
+  website: https://www.unibo.it/sitoweb/chiara.binelli/en
+
+- name: Luca Pinto
+  image: /assets/images/ .jpg
+  bio: "Luca Pinto is an assistant professor (tenure track) in Political Science at the University of Bologna. He completed his PhD and his undergraduate studies at the University of Milan. His research interests include party competition, governments and legislative studies, with particular attention to methodological aspects of political research. He has published on these topics several contributions in books and international journals."
+  website: https://www.unibo.it/sitoweb/luca.pinto/en
+  
+- name: Oltion Preka
+  image: /assets/images/Oltien.jpg
+  bio: "Oltion Preka is adjunct professor in Big Data for the Social Sciences at the University of Bologna. He has been Research Associate at the UCD - University College Dublin (Dublin, Ireland), and has completed his PhD at the University of Bologna. He has been Consultant to the Food and Agricultural Organization of the United Nations (FAO) for various projects for several years. His interests focus on applying the most advanced techniques of Machine Learning (ML) and Deep Learning (DL) (Natural Language Processing (NLP) in general and text analytics in particular) in the social sciences."
+  website: https://ggcantone.netlify.app
