--- a/_data/2022/bologna/speakers.yml
+++ b/_data/2022/bologna/speakers.yml
@@ -9,6 +9,6 @@
   website: https://www.unibo.it/sitoweb/luca.pinto/en
   
 - name: Oltion Preka
-  image: /assets/images/Oltien.jpg
+  image: /assets/images/Oltion.jpg
   bio: "Oltion Preka is adjunct professor in Big Data for the Social Sciences at the University of Bologna. He has been Research Associate at the UCD - University College Dublin (Dublin, Ireland), and has completed his PhD at the University of Bologna. He has been Consultant to the Food and Agricultural Organization of the United Nations (FAO) for various projects for several years. His interests focus on applying the most advanced techniques of Machine Learning (ML) and Deep Learning (DL) (Natural Language Processing (NLP) in general and text analytics in particular) in the social sciences."
-  website: https://ggcantone.netlify.app
+  website: https://www.unibo.it/sitoweb/oltion.preka/en
