--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -6,7 +6,8 @@
 - date: June 20, 2022
   events: Introduction and Ethics
     - name: "9:30 - 10:30 Introduction and logistics"
-    - name: "10:30 - 12:30 Small group discussions"
+    - name: "10:30 - 11:30 Talk by SICSS Alums"
+    - name: "11:30 - 12:30 Small group discussions"
     - name: "12:30 - 1:30 Lunch"
     - name: "1:30 - 4:00 Small Group Exercise on Ethics."
  
