--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -18,7 +18,7 @@
     - name: "12:00 - 1:30 Lunch"
     - name: "1:30 - 2:30 Small Group Exercise: Design Research Question"
     - name: "2:30 - 4:00 Small Group Exercise: Collect and Describe Digital Trace Data"
-    - name: "4:00- : Community Building Activity"
+    - name: "4:00- Community Building Activity"
 
 - date: June 22, 2022
   events: Text as Data
