--- a/_data/2022/sydney/teaching_assistants.yml
+++ b/_data/2022/sydney/teaching_assistants.yml
@@ -1,1 +1,3 @@
-- name:
+- name: Jen Grinham
+  image: /assets/images/JenGrinham.png
+  bio: "Jen Grinham’s research interests include data privacy, ethics, profiling, algorithmic bias, internet cultures, governance, digital media, and she is currently examining student data privacy risks created by educational technology companies. Jen has experience teaching in Digital Cultures at the University of Sydney, in the NSW Department of Education as an educator, an Instructional Leader for the NSW Australian History Syllabus, conducting professional development on technology, and with NSW Health in digital content."
