--- a/_data/2022/fgv-dapp-brazil/participants.yml
+++ b/_data/2022/fgv-dapp-brazil/participants.yml
@@ -6,6 +6,10 @@
   bio: "Alexsander Dugno Chiodi is a master's student in Political Science at the Federal University of Rio Grande do Sul, and holds a B.A. in Social Sciences from UFRGS. His research interests include new agents of political socialization, political values of Brazilian youth and social network analysis."
   image: /assets/images/1omyFSiPipo_MSbXnvt8tEfHajzivv1Fh.jpeg
 
+- name: Alisson Soares
+  bio: "Alisson Soares is a Ph.D. in sociology at the Federal University of Minas Gerais - Brazil, his traditional interest are sociological theory and epistemology and now is focussing on Computational Text Analysis/ NLP in R language as approaches to misinformation, conspiracy theories and stability of beliefs. He is also building a manual of Text Analysis with R in Portuguese."
+  image: /assets/images/1MvkoPTA5GzOrGs2zkk5ircY60arSnaF8.png
+
 - name: Ana Julia Bonzanini Bernardi
   bio: "Associate Professor at School of Sociology and Politics Foundation of São Paulo (FESPSP-Brazil) and researcher at the Latin America Research Center (NUPESAL-UFRGS). She holds a PhD in Political Science by the Federal University of Rio Grande do Sul (UFRGS-Brazil). Her work is focussed on the linkage between social network analysis and political culture to understand the impact of misinformation regarding politics in different scenarios. She is also broadly interested in studying public policies for civic empowerment, specially the ones related to youth and education."
   image: /assets/images/1Q1ET2UMnVskkVoMVr-KIjzg3fjcTMlwq.jpeg
