--- a/_data/2022/fgv-dapp-brazil/participants.yml
+++ b/_data/2022/fgv-dapp-brazil/participants.yml
@@ -7,7 +7,7 @@
   image: /assets/images/1omyFSiPipo_MSbXnvt8tEfHajzivv1Fh.jpeg
 
 - name: Alisson Soares
-  bio: "Alisson Soares is a Ph.D. in sociology at the Federal University of Minas Gerais - Brazil, his traditional interest are sociological theory and epistemology and now is focussing on Computational Text Analysis/ NLP in R language as approaches to misinformation, conspiracy theories and stability of beliefs. He is also building a manual of Text Analysis with R in Portuguese."
+  bio: "Alisson Soares is a PhD in sociology at the Federal University of Minas Gerais - Brazil, his traditional interest are sociological theory and epistemology and now is focussing on Computational Text Analysis/ NLP in R language as approaches to misinformation, conspiracy theories and stability of beliefs. He is also building a manual of Text Analysis with R in Portuguese."
   image: /assets/images/1MvkoPTA5GzOrGs2zkk5ircY60arSnaF8.png
 
 - name: Ana Julia Bonzanini Bernardi
