--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -167,7 +167,9 @@
     - name: "4:15 - 4:30 Break"
     - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary. An Intimate Fireside Chat and LIVE Q&A (*Zoom*)
     
-        - [Anthony K. Wutoh, Ph.D., R.Ph., Provost of Howard University](https://provost.howard.edu/about/administration#:~:text=D.%2C%20R.Ph.,and%20the%20Center%20of%20Excellencew)"
+        - [Anthony K. Wutoh, Ph.D., R.Ph., Provost of Howard University](https://provost.howard.edu/about/administration#:~:text=D.%2C%20R.Ph.,and%20the%20Center%20of%20Excellencew)
+        
+        - [Amy Yeboah Quarkume, Ph.D., Associate Professor of Africana Studies, Department of Afro-American Studies, Howard University](https://profiles.howard.edu/profile/43496/amy-yeboah-quarkume)"
         
   
 - date: 2022-06-21
@@ -196,7 +198,14 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Extract Features from Tweets (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2 (video) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed)"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective and varyCSS (video) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed)
+    
+      - Christen A. Smith, Associate Professor of African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin
+      
+      - [Gabriel Varela, Ph.D. Candidate, Sociology Department, Duke University](https://scholars.duke.edu/display/per7030532)
+      
+      - [Margaret Ally Zaslavsky, Ph.D. Candidate, Sociology Department, Cornell University](http://varycss.org/about/)"
+      
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
@@ -332,7 +341,7 @@
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "10:00 - 10:30 Logistics (*Zoom*)"
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-wide Institutional Survey Research and Data Collection (Graduate Division UC Berkeley) (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division UC Berkeley) (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video)
     
         - [Lisa Garcia-Bedolla, Vice Provost for Graduate Studies, Dean of the Graduate Division, Professor in the Graduate School of Education](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla)"  
         
@@ -346,7 +355,10 @@
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "10:00 - 10:30 Logistics (*Zoom*)"
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7 (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video)" 
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video)
+        
+        - [Mark Duerksen, Ph.D., Research associate, Africa Center for Strategic Studies](https://africacenter.org/experts/dr-mark-duerksen/)" 
+        
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
     - name: "4:00 - 5:30 Shawndra Hill, Ph.D., Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) (video) - LIVE session to include Q&A and office hour (*Zoom*)"
     
