--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -155,7 +155,7 @@ roundtable discussions:
 lunchtime talks:
   title: Bite-Sized Lunchtime Talks
   people:
-    - name: Africa Center for Strategic studies
+    - name: Africa Center for Strategic Studies
       image: /assets/images/Africa_center.png
       bio: "Since its inception in 1999, the Africa Center has served as a forum for research, academic programs, and the exchange of ideas with the aim of enhancing citizen security by strengthening the effectiveness and accountability of African institutions."
       website: https://africacenter.org/
