fixed sydney TAs bug

--- a/_data/2022/bologna/teaching_assistants.yml
+++ b/_data/2022/bologna/teaching_assistants.yml
@@ -13,7 +13,7 @@
   bio: "Giulio Giacomo Cantone is a PhD. Student in Complex Systems at University of Catania. He also spent 8 month at Indiana University in the NaN [https://cnets.indiana.edu/groups/nan/people/] Research Group on Disinformation. His research background is in quantitative and simulation studies regarding commercial and political disinformation in online reviews (Review Bomb). His current interests are in Metascience and Sociology of Science, about disinformation and epistemic crises in scientific literature. In particular, his technical interests are in the sensitivity to data dredging in mainstream models of statistical regression."
   website: https://ggcantone.netlify.app
   github: https://github.com/giuliogcantone
-  Twitter: @GGCanto
+  Twitter: https://twitter.com/GGCanto
 
   
   
