--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -2,6 +2,11 @@
   image: /assets/images/JOAjayi.jpg
   bio: "<p align='justify'>Julius Ajayi is a PhD candidate in the Department of Transport Management at the Ladoke Akintola University of Technology, Nigeria. He is also a Research Associate at the Centre for Economic Policy and Development Research (CEPDeR), Nigeria. His research interests include Transport Equity, Policy Development and Sustainability. His Doctoral thesis focuses on the disparities in access to public transportation among population groups in a sub-Sahara African urban centre. Between 2016 and 2019, Julius led data-driven education advocacy across three geopolitical zones in Nigeria.</p>"
   website: https://scholar.google.com/citations?hl=en&user=XcHpoAoAAAAJ
+
+- name: Joshua Akinyemi
+  image: /assets/images/JAkinyemi.jpg
+  bio: "<p align='justify'>Joshua Akinyemi is a Senior Lecturer in the Department of Epidemiology and Medical Statistics, College of Medicine, University of Ibadan, Nigeria. His expertise spans statistical demography and applied biostatistics with additional interests in the burgeoning discipline of data science and allied topics such as statistical and machine learning. He has extensive experience in advanced statistical modelling and multi-country analysis of complex nationally-representative household surveys.</p>"
+  website: https://scholar.google.com/citations?user=ImHGpY0AAAAJ&hl=en
   
 - name: Marvellous Ngundu
   image: /assets/images/MNgundu.jpg
