--- a/_data/2022/bologna/speakers.yml
+++ b/_data/2022/bologna/speakers.yml
@@ -9,11 +9,11 @@
   website: https://www.unibo.it/sitoweb/luca.pinto/en
   
 - name: Oltion Preka
-  image: /assets/images/Oltion.jpg
+  image: /assets/images/Preka.jpeg
   bio: "Oltion Preka is adjunct professor in Big Data for the Social Sciences at the University of Bologna. He has been Research Associate at the UCD - University College Dublin (Dublin, Ireland), and has completed his PhD at the University of Bologna. He has been Consultant to the Food and Agricultural Organization of the United Nations (FAO) for various projects for several years. His interests focus on applying the most advanced techniques of Machine Learning (ML) and Deep Learning (DL) (Natural Language Processing (NLP) in general and text analytics in particular) in the social sciences."
   website: https://www.unibo.it/sitoweb/oltion.preka/en
 
 - name: Elena Esposito
-  image: /assets/images/_DSC0068.jpg
+  image: /assets/images/Esposito.jpg
   bio: "Elena Esposito is Professor of Sociology at the University Bielefeld and the University of Bologna. She has published extensively on the theory of society, media theory, memory theory and the sociology of financial markets. Her current research on algorithmic prediction is supported by a five-year Advanced Grant from the European Research Council."
   website: https://www.unibo.it/sitoweb/elena.esposito9/
