--- a/_data/2022/bologna/teaching_assistants.yml
+++ b/_data/2022/bologna/teaching_assistants.yml
@@ -4,7 +4,7 @@
   website: 
 
 - name: Riccardo Omenti
-  image: /assets/images/IMG_2507.jpg
+  image: /assets/images/Omenti.jpeg
   bio: "Riccardo Omenti is a first-year PhD student in Statistics at the University of Bologna. His research interests concern the study of quantitative methods for the social sciences as well as the implementation of statistical techniques that allow to turn the traces people leave on social media and on the internet into data suitable for demographic research. During his PhD, Riccardo will develop statistical techniques to study the evolution of fertility, mortality and migration in family networks using internet-based genealogies as part of the ERC project “Genes, genealogies and the evolution of demographic change and social inequality."
   website: 
   
