--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -8,15 +8,19 @@
   bio: "<p align='justify'>Joshua Akinyemi is a Senior Lecturer in the Department of Epidemiology and Medical Statistics, College of Medicine, University of Ibadan, Nigeria. His expertise spans statistical demography and applied biostatistics with additional interests in the burgeoning discipline of data science and allied topics such as statistical and machine learning. He has extensive experience in advanced statistical modelling and multi-country analysis of complex nationally-representative household surveys.</p>"
   website: https://scholar.google.com/citations?user=ImHGpY0AAAAJ&hl=en
   
+- name: Joseph David
+  image: /assets/images/JDavid.jpg
+  bio: "<p align='justify'>Joseph David is a Masters student in Economics at the Umaru Musa Yar’adua University, Katsina. His primary research interests include poverty and inequality, public finance, corruption, development economics and money laundering. Joseph’s current research focuses on the response of the level of poverty to different thresholds of debt stocks and debt burden in several African countries.</p>"
+  website: https://twitter.com/SmallJosePhD
+  
 - name: Marvellous Ngundu
   image: /assets/images/MNgundu.jpg
   bio: "<p align='justify'>Marvellous Ngundu is a Postdoctoral Research Fellow in economics at the University of KwaZulu Natal (UKZN) in South Africa, a Research Assistant at the UKZN's Macroeconomics Research Unit (MRU), and a Research Fellow at Covenant University's Center for Economic Policy and Development Research (CEPDeR) in Nigeria. His primary research interests include China-Africa economic engagement, and international and development economics.</p>"
 
 - name: Mary Muyonga
-  image: 
+  image: /assets/images/MKalerwa.jpg
   bio: "<p align='justify'>Mary Muyonga is a PhD candidate at the Population Institute at the Department of Geography, Population and Environmental Studies at the University of Nairobi in Kenya. Prior to her doctoral studies, Mary obtained a Master's degree from the same Institute. Her research interests are migration and urbanisation and their interplay with development, and more recently, the use of alternative, emergent research methods in social science research.</p>"
   website: https://twitter.com/MaryMuyonga
-
 
 - name: Damian Kalu	Ude
   image: /assets/images/UDamian.jpg
