Update schedule + typo corrected

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -83,7 +83,7 @@ speakers:
       image: /assets/images/jias_SabeloMhlambi.jpg
       website: https://sabelo.mhlambi.com/about/
 
-    - name: Adreana Marais
+    - name: Adriana Marais
       bio: "Dr Adriana Marais has a background in research, her award-winning PhD and
 postdoctoral work in quantum biology focused on photosynthesis and the origins of
 the building blocks of life in space. She is an internationally renowned advocate for
