--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -11,20 +11,20 @@
 - date: Tuesday, June 21 2022
   events:
     - name: "09:45 Check-in"
-    - name: "10:00 - 12:00 Speaker 1: Bhaso Ndzendze (University of Johannesburg)"
+    - name: "10:00 - 12:00 Speaker 1: [Bhaso Ndzendze](https://bhasondzendze.co.za/) (University of Johannesburg)"
     - name: "11:00 - 13:00 Break or catch up on R resources"
     - name: "13:00 - 15:00 Group meetings: work on book report"
     - name: "16:00 - 17:00 Speaker 2: Geci Karuri-Sebina (Wits University)"
 
 - date: Wednesday, June 22 2022
   events:
-    - name: "15:00 - 16:00 Speaker 1: Sabelo Mhlambi (Berkman-Klein Center for Internet and
+    - name: "15:00 - 16:00 Speaker 1: [Sabelo Mhlambi](https://sabelo.mhlambi.com/about/) (Berkman-Klein Center for Internet and
       Society)"
-    - name: "16:00 - 17:00 Speaker 2: Chenai Chair (Moz://a Foundation)"
+    - name: "16:00 - 17:00 Speaker 2: [Chenai Chair](https://www.chenai.africa)  (Moz://a Foundation)"
 
 - date: Thursday, June 23 2022
   events:
-    - name: "14:00 - 15:00 Speaker 1: Adriana Marais (Proudly Human)"
+    - name: "14:00 - 15:00 Speaker 1: [Adriana Marais](https://www.adrianamarais.org/about/) (Proudly Human)"
     - name: "15:00 - 16:00 Group meetings"
     - name: "16:00 - 17:00 Speaker 2: Tendani Chimboza (University of Cape Town)"
 
