replaced image for participant

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -146,7 +146,7 @@ participants:
 
     - name: Nonkululeko Manyika
       bio: "I am a qualified professional with more than 10 years of experience in the private      sector namely; Construction, Financial Services (Banking and Insurance), Logistics and      heading up a Non-Profit Organization. Through my directorships I have gained a lot of      knowledge in the petroleum industry around legislative and governance in enabling a      successful investment vehicle benefiting the broader historically disadvantaged African      communities. My interests include computational science and healthcare with a focus on      marginalized communities. "
-      image: /assets/images/jias_khosiManyika.png
+      image: /assets/images/jias_khosi.jpg
 
     - name: Sandra Okonofua
       image: /assets/images/18mFVGnAml9K9AV2Ge0cJxwnLdlXjHKH5.jpeg
