--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -3,7 +3,7 @@ organisers:
   people:
     - name: malebo sephodi
       image: /assets/images/jias_malebo.jpg
-      bio: "malebo sephodi (she/they) is a South African Feminist writer and scholar. She is a doctoral
+      bio: "malebo sephodi (she/they) is a South African Feminist writer and interdisciplinary scholar. She is a doctoral
       candidate in the Information Systems Department at the University of Cape Town. She is interested in the
       intersections of society and digital technology."
 
