--- a/_data/2022/atlanta/participants.yml
+++ b/_data/2022/atlanta/participants.yml
@@ -86,6 +86,10 @@
   image: /assets/images/Chris Thayer.jpg
   bio: "Chris Thayer is a Data Scientist with the Georgia Policy Labs specializing in data preparation, sensitive data de-identification, and policy communication. Their research interests include administrative data linkage and housing programs. Chris holds master’s degrees in public policy and city & regional planning from the Georgia Institute of Technology."  
   
+- name: "Lauren Williams"
+  image: /assets/images/Lauren Williams.jpeg
+  bio: "Lauren Williams is a MS candidate for Business Analytics at Mercer University. Her research areas of interest include natural language processing, process optimization & logistics.  Previously, she was a research assistant at The University of Alabama, where she obtained her BS in marketing. The research was primarily operations based and focused on designing an equitable and effective food distribution system for Feeding America." 
+  
 - name: "Ben Wills"
   image: /assets/images/Ben Wills.jpg
   bio: "Ben Curran Wills is a MS candidate in the School of History and Sociology under a Kranzberg Fellowship. He is interested in equity implications of telehealth and aligned business models, masculinities, financialization; and labor/future of work. Previously he was a (senior) project manager and research assistant at The Hastings Center, a bioethics think tank in New York, where he worked on ethics of public deliberation over wild release of genetically modified organisms, the impacts of returning genetic test results about autism, and public opinion of human-animal chimera research, among other projects."  
