--- a/_data/2022/sydney/participants.yml
+++ b/_data/2022/sydney/participants.yml
@@ -72,7 +72,7 @@ political settings."
   bio: "Premeet Sidhu is a PhD student at The University of Sydney. Her PhD explores the modern resurgence and appeal of the tabletop role-playing game Dungeons & Dragons [D&D]. Her current research interests include investigating how meaningful player experiences in games can be applied and considered in education and media."
   
 - name: Elena Sheard
-  image: /assets/images/Elena.Sheard.jpg
+  image: /assets/images/Elena_Sheard.jpg
   bio: "Elena Sheard is a PhD student with the Sydney Speaks Project at the Australian National University. Her research focuses on predicting language change over individuals’ lifespans, using quantitative analysis of longitudinal data from the 1970s and 2010s. She completed her Bachelor (Linguistics and Italian Studies) and Honours (Linguistics) Degrees at the University of Sydney."
   
 - name: Ryan Stanton
