--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -48,27 +48,27 @@
 
         **"The Impact of Masks on Assessments of Facial Expressions of Pain"**
 
-          - Troy Dildine, Ph.D. candidate, Neuroscience, National Institutes of Health and Karolinska Institutet & SICSS-Howard/Mathematica 2020 alum
+          - Troy Dildine, Ph.D. candidate, Neuroscience, National Institutes of Health and Karolinska Institutet & SICSS-Howard/Mathematica 2021 alum
 
-          - Regina Ebo, Ph.D. candidate, Psychology, UC Berkeley & SICSS-Howard/Mathematica 2020 alum
+          - Regina Ebo, Ph.D. candidate, Psychology, UC Berkeley & SICSS-Howard/Mathematica 2021 alum
 
-          - Yondu Mori, Ph.D. candidate, Communication Sciences and Disorders, McGill University & SICSS-Howard/Mathematica 2020 alum
+          - Yondu Mori, Ph.D. candidate, Communication Sciences and Disorders, McGill University & SICSS-Howard/Mathematica 2021 alum
 
-          - Rashun Miles, Ph.D. candidate, Social Welfare, University of Mississippi & SICSS-Howard/Mathematica 2020 alum
+          - Rashun Miles, Ph.D. candidate, Social Welfare, University of Mississippi & SICSS-Howard/Mathematica 2021 alum
                 
                 
 
         **"Global Crowns: Emotions Surrounding Natural Hair of Black Women around the Globe"** 
 
-          - Nicole Jenkins, Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica 2020 alum
+          - Nicole Jenkins, Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica 2021 alum
 
-          - Yash Tadimalla, Ph.D. candidate, Interdisciplinary track in the College of Computing and Informatics, University of North Carolina & SICSS-Howard/Mathematica 2020 alum
+          - Yash Tadimalla, Ph.D. candidate, Interdisciplinary track in the College of Computing and Informatics, University of North Carolina & SICSS-Howard/Mathematica 2021 alum
 
 
 
         **"Pre-service Sentiment: Analyzing Transcripts from a Student Avatar Experiment in Classroom Management Simulations"**
 
-          - Todd Hall, Ph.D. candidate, Education Policy, University of Virginia & SICSS-Howard/Mathematica 2020 alum
+          - Todd Hall, Ph.D. candidate, Education Policy, University of Virginia & SICSS-Howard/Mathematica 2021 alum
 
           - Vivian Wong, Ph.D., Associate Professor, School of Education and Human Development, University of Virginia
          
@@ -97,7 +97,11 @@
              
           - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [(video)](https://youtu.be/PGhI39loSYg)
 
-          - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
+          - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
+
+          - Nicole Jenkins, Ph.D., Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alum 2021
+          
+          - Amy Yeboah Quarkume, Ph.D., Associate Professor, Africana Studies, Department of Afro-American Studies, Howard University
 
           - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [(video)](https://youtu.be/y-dp19EpEcU)
 
@@ -145,11 +149,11 @@
     
         **Speakers**
       
-          - Janeria Easley, Ph.D., Assistant professor, Department of African American Studies, Emory University
+          - Janeria Easley, Ph.D., Assistant professor, Department of African American Studies, Emory University & SICSS-Howard/Mathematica 2021 alum
 
-          - Felix Owusu, Ph.D., Postdoctoral Research Fellow, Program in Criminal Justice Policy and Management, Harvard University
+          - Felix Owusu, Ph.D., Postdoctoral Research Fellow, Program in Criminal Justice Policy and Management, Harvard University & SICSS-Howard/Mathematica 2021 alum
 
-          - Maxine Van Doren, Ph.D. student, Linguistics, UC San Diego
+          - Maxine Van Doren, Ph.D. student, Linguistics, UC San Diego & SICSS-Howard/Mathematica 2021 alum
 
 
           
@@ -200,11 +204,11 @@
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective and varyCSS (video) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed)
     
-      - Christen A. Smith, Associate Professor of African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin
+      - [Christen A. Smith, Associate Professor of African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin](https://liberalarts.utexas.edu/anthropology/faculty/cs23775)
       
       - [Gabriel Varela, Ph.D. Candidate, Sociology Department, Duke University](https://scholars.duke.edu/display/per7030532)
       
-      - [Margaret Ally Zaslavsky, Ph.D. Candidate, Sociology Department, Cornell University](http://varycss.org/about/)"
+      - [Katherine Zaslavsky, Ph.D. Candidate, Sociology Department, Cornell University](http://varycss.org/about/)"
       
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
@@ -278,6 +282,8 @@
           - [Lebogang Ramafoko, Executive Director of Oxfam South Africa](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit)
           
           - Speaker TBA
+          
+          - Speaker TBA
 
 
           
@@ -290,16 +296,16 @@
     - name: "11:45 - 12:00 Logistics and Research Speed Dating Logistics (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #5: MITRE (video) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed)
         
-        - Hannah De los Santos, Ph.D., Lead Data Scientist, Model-based Analytics Department, MITRE
+        - [Hannah De los Santos, Ph.D., Lead Data Scientist, Model-based Analytics Department, MITRE](https://www.researchgate.net/profile/Hannah-De-Los-Santos)
         
-        - Yahya Shaikh, Ph.D., Physician specializing in primary care, public health, and clinical informatic, MITRE"
+        - [Yahya Shaikh, Ph.D., Physician specializing in primary care, public health, and clinical informatic, MITRE](https://www.linkedin.com/in/yahya-shaikh-45646752)"
         
     - name: "1:00 - 2:00 Round 1-6 (ten minutes each) (*Zoom*)"
     - name: "2:00 - 2:15 Break"
     - name: "2:15 - 3:15 Round 7-12 (*Zoom*)"
     - name: "3:15 - 3:30 Break"
     - name: "3:30 - 4:00 Group debrief (join research teams) (*Zoom*)"
-    - name: '4:00 - 5:30 Karen Levy, Ph.D., Assistant Professor, Information Sciences, Cornell University, "Robotruckers: The Double Threat of AI for Low-Wage Work" (video) - LIVE session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 [Karen Levy, Ph.D., Assistant Professor, Information Sciences, Cornell University](https://sts.cornell.edu/karen-levy), "Robotruckers: The Double Threat of AI for Low-Wage Work" (video) - LIVE session to include Q&A and office hour (*Zoom*)'
     
   
 - date: 2022-06-28
@@ -330,7 +336,7 @@
         
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 Brandeis Marshall, Ph.D., Professor, Computer Science, Spelman University, "Data Conscience: Algorithmic Siege on Our Humanity" (video) - LIVE session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 [Brandeis Marshall, Ph.D., Professor, Computer Science, Spelman University](https://www.brandeismarshall.com/), "Data Conscience: Algorithmic Siege on Our Humanity" (video) - LIVE session to include Q&A and office hour (*Zoom*)'
     
     
 - date: 2022-06-29
@@ -344,7 +350,7 @@
         - [Lisa Garcia-Bedolla, Vice Provost for Graduate Studies, Dean of the Graduate Division, Professor in the Graduate School of Education](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla)"  
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 Kyla McMullen, Ph.D., Assistant Professor, Computer Science, University of Florida, "Using Uncommon data to understand society and its people" (video) - LIVE session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 [Kyla McMullen, Ph.D., Assistant Professor, Computer Science, University of Florida](http://kylamcmullen.com/), "Using Uncommon data to understand society and its people" (video) - LIVE session to include Q&A and office hour (*Zoom*)'
 
 
 - date: 2022-06-30
@@ -358,7 +364,7 @@
         - [Mark Duerksen, Ph.D., Research associate, Africa Center for Strategic Studies](https://africacenter.org/experts/dr-mark-duerksen/)" 
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 Shawndra Hill, Ph.D., Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) (video) - LIVE session to include Q&A and office hour (*Zoom*)"
+    - name: "4:00 - 5:30 [Shawndra Hill, Ph.D., Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), (Title TBA) (video) - LIVE session to include Q&A and office hour (*Zoom*)"
     
 
 - date: 2022-07-01
